# rename-legal

./: Cargo.toml  README.md  cspell.json
.github/workflows/: release.yml  test.yml
src/: emoji.rs  main.rs  win_illegal.rs
