[package]
name = "rename-legal"
version = "0.1.1"
edition = "2021"
description = "deal with filename, remove illegal strings and emojis when file renaming"
license = "MIT"
homepage = "https://github.com/mudssky/rename-legal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
unicode-segmentation = "1.10.1"
