[package]
name = "rename-legal"
version = "0.1.2"
edition = "2021"
description = "deal with filename, remove illegal strings and emojis when file renaming"
license = "MIT"
homepage = "https://github.com/mudssky/rename-legal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
unicode-segmentation = "1.10.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
	"x86_64-pc-windows-msvc",
	"aarch64-apple-darwin",
]
